[package]
name = "signals"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
signals-common = { path = "../signals-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.18", features = ["full"] }
bytes = "1"
prost = "0.10.4"
tonic = "0.7.2"

[[bin]]
name = "signals"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.7.2"
